fix: fixing code horizontal overflow. Fixing code not being scrollable.

--- a/src/components/reader/styles.css
+++ b/src/components/reader/styles.css
@@ -14,6 +14,7 @@ pre {
     padding: 12px;
     margin: 8px;
     overflow: auto;
+    max-width: 60vmax;
 }
 
 code {
@@ -21,6 +22,7 @@ code {
     color: #8df3f9;
     border-radius: 3px;
     padding: 2px 6px;
+    overflow: auto;
 }
 
 h1 {
